# galytix-test

./: .gitignore  README.md  config.yaml  main.py  pyproject.toml  requirements.txt
src/: get_w2v_model.py  phrases_similarity.py  utils.py
